LMYC-67: created new bulk sales endpoint
